--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase": "^9.21.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.4",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
